--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 13:05:04 2018</p>
+         Last Run: Wed Nov 21 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>3</td>
                         <td>-1</td>
                         <td>0</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
+                 "55",
                  "62",
                  "70"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 13:05:04 2018</p>
+         Last Run: Wed Nov 21 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -245,51 +245,51 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>1</td>
-                        <td>10</td>
-                        <td>SSE</td>
-                        <td>49</td>
+                        <td>8</td>
+                        <td>S</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>62</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>SSE</td>
-                        <td>30</td>
+                        <td>S</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
+                        <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>4</td>
                         <td>59</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>19</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>4</td>
-                        <td>61</td>
+                        <td>5</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>15</td>
+                        <td>47</td>
                      </tr>
                   </tbody>
                </table>
@@ -392,9 +392,9 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
+                 "5",
                  "4",
-                 "4",
-                 "4"
+                 "5"
                ]
              },
              {
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
+                 "68",
                  "62",
                  "59",
-                 "61"
+                 "62"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "49",
-                 "30",
-                 "19",
-                 "15"
+                 "68",
+                 "64",
+                 "60",
+                 "47"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 13:05:04 2018</p>
+         Last Run: Wed Nov 21 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -480,14 +480,14 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>2</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>19</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -495,11 +495,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>53</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>16</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -507,10 +507,10 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>52</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NW</td>
+                        <td>WNW</td>
                         <td>15</td>
                      </tr>
                   </tbody>
@@ -538,7 +538,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-3",
                  "0",
                  "0"
                ]
@@ -550,7 +550,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "0",
                  "2",
                  "2"
                ]
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "53",
-                 "52"
+                 "56",
+                 "51",
+                 "50"
                ]
              },
              {
@@ -631,8 +631,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "16",
+                 "22",
+                 "17",
                  "15"
                ]
              }
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 13:05:04 2018</p>
+         Last Run: Wed Nov 21 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -694,37 +694,37 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>4</td>
-                        <td>78</td>
+                        <td>5</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>73</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>4</td>
-                        <td>78</td>
+                        <td>5</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>72</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
-                        <td>-7</td>
-                        <td>4</td>
-                        <td>78</td>
+                        <td>-6</td>
+                        <td>5</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SW</td>
                         <td>71</td>
                      </tr>
@@ -755,7 +755,7 @@
                "data":[
                  "-7",
                  "-7",
-                 "-7"
+                 "-6"
                ]
              },
              {
@@ -824,9 +824,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
-                 "4"
+                 "5",
+                 "5",
+                 "5"
                ]
              },
              {
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "78",
-                 "78"
+                 "79",
+                 "79",
+                 "79"
                ]
              },
              {
@@ -846,8 +846,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "73",
-                 "72",
+                 "83",
+                 "75",
                  "71"
                ]
              }
