--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 14:05:02 2018</p>
+         Last Run: Wed Nov 21 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -42,15 +42,15 @@
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>1</td>
-                        <td>62</td>
+                        <td>0</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>65</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>70</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SSW</td>
-                        <td>53</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "1",
+                 "0",
                  "1"
                ]
              },
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "55",
-                 "62",
-                 "70"
+                 "61",
+                 "68"
                ]
              },
              {
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "69",
-                 "65",
-                 "53"
+                 "54",
+                 "54"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 14:05:02 2018</p>
+         Last Run: Wed Nov 21 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -261,7 +261,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>5</td>
-                        <td>62</td>
+                        <td>63</td>
                         <td>1</td>
                         <td>10</td>
                         <td>S</td>
@@ -273,7 +273,7 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>4</td>
-                        <td>59</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
@@ -404,8 +404,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "68",
-                 "62",
-                 "59",
+                 "63",
+                 "60",
                  "62"
                ]
              },
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 14:05:02 2018</p>
+         Last Run: Wed Nov 21 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 14:05:02 2018</p>
+         Last Run: Wed Nov 21 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -695,10 +695,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Overcast</td>
-                        <td>-3</td>
-                        <td>-7</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>5</td>
-                        <td>79</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -707,10 +707,10 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-3</td>
-                        <td>-7</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>5</td>
-                        <td>79</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -719,12 +719,12 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>-3</td>
+                        <td>-2</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>79</td>
+                        <td>77</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SW</td>
                         <td>71</td>
                      </tr>
@@ -753,8 +753,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
-                 "-7",
+                 "-6",
+                 "-6",
                  "-6"
                ]
              },
@@ -765,9 +765,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
-                 "-3",
-                 "-3"
+                 "-2",
+                 "-2",
+                 "-2"
                ]
              }
            ]
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
-                 "79",
-                 "79"
+                 "77",
+                 "77",
+                 "77"
                ]
              },
              {
