--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 15:05:03 2018</p>
+         Last Run: Wed Nov 21 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -56,11 +56,11 @@
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>1</td>
-                        <td>-3</td>
+                        <td>-2</td>
                         <td>1</td>
                         <td>68</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SSW</td>
                         <td>54</td>
                      </tr>
@@ -91,7 +91,7 @@
                "data":[
                  "-1",
                  "-2",
-                 "-3"
+                 "-2"
                ]
              },
              {
@@ -219,12 +219,13 @@
                      options: options
                   });
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 15:05:03 2018</p>
+         Last Run: Wed Nov 21 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -253,7 +254,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>68</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,35 +262,35 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>5</td>
-                        <td>63</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>64</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>4</td>
-                        <td>60</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>60</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>5</td>
-                        <td>62</td>
+                        <td>4</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>47</td>
+                        <td>46</td>
                      </tr>
                   </tbody>
                </table>
@@ -394,7 +395,7 @@
                  "5",
                  "5",
                  "4",
-                 "5"
+                 "4"
                ]
              },
              {
@@ -404,9 +405,9 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "68",
-                 "63",
-                 "60",
-                 "62"
+                 "62",
+                 "59",
+                 "61"
                ]
              },
              {
@@ -415,10 +416,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "68",
-                 "64",
-                 "60",
-                 "47"
+                 "66",
+                 "62",
+                 "58",
+                 "46"
                ]
              }
            ]
@@ -458,7 +459,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 15:05:03 2018</p>
+         Last Run: Wed Nov 21 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -495,11 +496,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>17</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -509,9 +510,9 @@
                         <td>2</td>
                         <td>50</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WNW</td>
-                        <td>15</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -621,7 +622,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "56",
-                 "51",
+                 "52",
                  "50"
                ]
              },
@@ -632,8 +633,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "22",
-                 "17",
-                 "15"
+                 "18",
+                 "16"
                ]
              }
            ]
@@ -673,7 +674,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 15:05:03 2018</p>
+         Last Run: Wed Nov 21 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -695,10 +696,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Overcast</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>5</td>
-                        <td>77</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -722,11 +723,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>77</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>71</td>
+                        <td>70</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,7 +754,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
+                 "-7",
                  "-6",
                  "-6"
                ]
@@ -765,7 +766,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
+                 "-3",
                  "-2",
                  "-2"
                ]
@@ -835,9 +836,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "78",
                  "77",
-                 "77",
-                 "77"
+                 "78"
                ]
              },
              {
@@ -848,7 +849,7 @@
                "data":[
                  "83",
                  "75",
-                 "71"
+                 "70"
                ]
              }
            ]
